hw12_13_14_15_calendar/charts/templates/calendar-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: calendar-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: calendar-app
  template:
    metadata:
      labels:
        app: calendar-app
    spec:
      containers:
      - name: calendar
        image: calendar:develop
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
