hw12_13_14_15_calendar/charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
  annotations:
    # Аннотации позволяют настроить поведение
    # ингресс-контроллера и, конечно, зависят от
    # того, какой именно мы взяли — сейчас это nginx:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    # Правила роутинга представляют собой ровно то,
    # что можно ожидать — хост, протокол, пути, на какой 
    # сервис (и какой порт) перенаправить трафик: 
    - host: calendar.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 40002
